@@ -1,5 +1,8 @@
 2001-08-27  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* ogdi/driver/rpf/rpf.c: Fixed computation of width and height in
+	GetRasterInfo().  Update test suite accordingly.
+
 	* vpflib/muse_dir.c: Fixed check for DOT_FOUND to only look in
 	the last component of the path, not the whole path, otherwise
 	directories with dots in them cause problems.
